# pyproject.toml

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customisedLogs"
version = "2.0.2"
description = "A well maintained package to have coloured logs on the terminal. This would help isolate errors and success messages from each other by their colours."
readme = "README.md"
maintainers = [{ name = "Bhindi", email = "bhaskarpanja93@gmail.com" },
           { name = "riyapuri0710", email = "riyapuri0710@gmail.com" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["log", "logs", "pretty", "prettified", "color", "colored", "coloured logs", "colored terminal", "logger", "tailwind"]
requires-python = ">=3.6"
dependencies = ["colr"]

[project.urls]
Homepage = "https://github.com/BhaskarPanja93/customisedLogs"
